purged css and fixed icon alignment and showing display name for top info

--- a/app/styles/components/system-overlay/_system-metadata.scss
+++ b/app/styles/components/system-overlay/_system-metadata.scss
@@ -1,8 +1,4 @@
 .system-metadata {
-  //@include media-query(sm) { @include rem('padding-left', 25px); }
-
   .metadata-value { word-wrap: break-word; }
   .alert-danger { @include rem('margin-top', $global-padding); }
-
-  .basic-information { .icon-inline { @include rem('padding-left', 64px); } }
 }
